<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/sm_keyLines"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:text="@string/design_text_alert"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:padding="@dimen/vsm_keyLines"
        android:text="@string/shevat"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="@dimen/vsm_keyLines"
        android:text="Special thanks to Nikhil Chaudhari"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:textAlignment="center"
        android:text="@string/copyright"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>